distrib and home sections responsive fix

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div id="home-section">
+        <div class="navbar">
+            <a class="logo" href="#"><h1>LM Distribution</h1></a>
+            <a class="button" href="#footer">Faire un Devis</a>
+        </div>
         <div class="home-container">
-            <div class="navbar">
-                <a class="logo" href="#"><h1>LM Distribution</h1></a>
-                <a class="button" href="#footer">Faire un Devis</a>
-            </div>
             <div class="home-content">
                 <p class="home-title">Votre Pause, Notre Priorité</p>
                 <p class="home-description">Distibuteurs automatiques de boissons chaudes & snacks</p>
@@ -25,112 +25,110 @@
             </div>
         </div>
     </div>
-    <div id="distrib-section">
-        <div class="distrib-container">
-            <div class="distrib-title">
-                <p>Nos Distributeurs</p>
-            </div>
-            <div class="distrib-content">
-                <div class="distrib-description" id="melodia">
-                    <p class="description-title">Necta Melodia</p>
-                    <div class="description-text">
-                        <h3>Caractéristiques</h3>
-                        <ul>
-                            <li>Nombre de sélections – 32</li>
-                            <li>Hauteur – 1.70m</li>
-                            <li>Largeur - 72cm</li>
-                            <li>Profondeur - 88cm</li>
-                            <li>Poids - 200kg</li>
-                        </ul>
-                        <h3>Nos Produits</h3>
-                        <ul>
-                            <li>Eau</li>
-                            <li>Canettes</li>
-                            <li>Bouteilles</li>
-                            <li>Barre céréales</li>
-                            <li>Barre chocolaté</li>
-                            <li>Chips</li>
-                            <li>Boissons énergétique</li>
-                            <li>Sandwichs</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="distrib-description" id="kikko">
-                    <p class="description-title">Necta Kikko</p>
-                    <div class="description-text">
-                        <h3>Caractéristiques</h3>
-                        <ul>
-                            <li>Capacité - 500 Gobelets</li>
-                            <li>Hauteur - 1.70m</li>
-                            <li>Largeur - 60cm</li>
-                            <li>Profondeur - 74cm</li>
-                            <li>Poids - 114kg</li>
-                        </ul>
-                        <h3>Nos Produits</h3>
-                        <ul>
-                            <li>Café grains (plusieurs choix disponible)</li>
-                            <li>Décaféiné</li>
-                            <li>Café vanille</li>
-                            <li>Café noisette</li>
-                            <li>Lait</li>
-                            <li>Chocolat</li>
-                            <li>Thé menthe</li>
-                            <li>Thé citron</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="distrib-description" id="kikko-max">
-                    <p class="description-title">Necta Kikko Max</p>
-                    <div class="description-text">
-                        <h3>Caractéristiques</h3>
-                        <ul>
-                            <li>Capacité - 620 Gobelets</li>
-                            <li>Hauteur - 1.83m</li>
-                            <li>Largeur - 54cm</li>
-                            <li>Profondeur - 65cm</li>
-                            <li>Poids - 136kg</li>
-                        </ul>
-                        <h3>Nos Produits</h3>
-                        <ul>
-                            <li>Café grains (plusieurs choix disponible)</li>
-                            <li>Décaféiné</li>
-                            <li>Café vanille</li>
-                            <li>Café noisette</li>
-                            <li>Lait</li>
-                            <li>Chocolat</li>
-                            <li>Thé menthe</li>
-                            <li>Thé citron</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="carousel-container">
-                    <div class="carousel">
-                        <div class="button-1-container">
-                            <button class="carousel-button" id="prevButton">
-                                <i class="fa-solid fa-chevron-left fa-2xl"></i>
-                            </button>
-                        </div>
-                        <div class="slide-container">
-                            <div class="carousel-slide" id="carousel-image-1">
-                                <img src="img/machine1.png" alt="Melodia">
-                            </div>
-                            <div class="carousel-slide" id="carousel-image-3">
-                                <img src="img/machine3.png" alt="Kikko">
-                            </div>
-                            <div class="carousel-slide" id="carousel-image-2">
-                                <img src="img/machine2.png" alt="Kikko Max">
-                            </div>
-                        </div>
-                        <div class="button-2-container">
-                            <button class="carousel-button" id="nextButton">
-                                <i class="fa-solid fa-chevron-right fa-2xl"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="indicators" id="indicators"></div>
+    <div class="distrib-container" id="distrib-section">
+        <div class="distrib-title">
+            <p>Nos Distributeurs</p>
         </div>
+        <div class="distrib-content">
+            <div class="distrib-description" id="melodia">
+                <p class="description-title">Necta Melodia</p>
+                <div class="description-text">
+                    <h3>Caractéristiques</h3>
+                    <ul>
+                        <li>Nombre de sélections – 32</li>
+                        <li>Hauteur – 1.70m</li>
+                        <li>Largeur - 72cm</li>
+                        <li>Profondeur - 88cm</li>
+                        <li>Poids - 200kg</li>
+                    </ul>
+                    <h3>Nos Produits</h3>
+                    <ul>
+                        <li>Eau</li>
+                        <li>Canettes</li>
+                        <li>Bouteilles</li>
+                        <li>Barre céréales</li>
+                        <li>Barre chocolaté</li>
+                        <li>Chips</li>
+                        <li>Boissons énergétique</li>
+                        <li>Sandwichs</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="distrib-description" id="kikko">
+                <p class="description-title">Necta Kikko</p>
+                <div class="description-text">
+                    <h3>Caractéristiques</h3>
+                    <ul>
+                        <li>Capacité - 500 Gobelets</li>
+                        <li>Hauteur - 1.70m</li>
+                        <li>Largeur - 60cm</li>
+                        <li>Profondeur - 74cm</li>
+                        <li>Poids - 114kg</li>
+                    </ul>
+                    <h3>Nos Produits</h3>
+                    <ul>
+                        <li>Café grains (plusieurs choix disponible)</li>
+                        <li>Décaféiné</li>
+                        <li>Café vanille</li>
+                        <li>Café noisette</li>
+                        <li>Lait</li>
+                        <li>Chocolat</li>
+                        <li>Thé menthe</li>
+                        <li>Thé citron</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="distrib-description" id="kikko-max">
+                <p class="description-title">Necta Kikko Max</p>
+                <div class="description-text">
+                    <h3>Caractéristiques</h3>
+                    <ul>
+                        <li>Capacité - 620 Gobelets</li>
+                        <li>Hauteur - 1.83m</li>
+                        <li>Largeur - 54cm</li>
+                        <li>Profondeur - 65cm</li>
+                        <li>Poids - 136kg</li>
+                    </ul>
+                    <h3>Nos Produits</h3>
+                    <ul>
+                        <li>Café grains (plusieurs choix disponible)</li>
+                        <li>Décaféiné</li>
+                        <li>Café vanille</li>
+                        <li>Café noisette</li>
+                        <li>Lait</li>
+                        <li>Chocolat</li>
+                        <li>Thé menthe</li>
+                        <li>Thé citron</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="carousel-container">
+                <div class="carousel">
+                    <div class="button-1-container">
+                        <button class="carousel-button" id="prevButton">
+                            <i class="fa-solid fa-chevron-left fa-2xl"></i>
+                        </button>
+                    </div>
+                    <div class="slide-container">
+                        <div class="carousel-slide" id="carousel-image-1">
+                            <img src="img/machine1.png" alt="Melodia">
+                        </div>
+                        <div class="carousel-slide" id="carousel-image-3">
+                            <img src="img/machine3.png" alt="Kikko">
+                        </div>
+                        <div class="carousel-slide" id="carousel-image-2">
+                            <img src="img/machine2.png" alt="Kikko Max">
+                        </div>
+                    </div>
+                    <div class="button-2-container">
+                        <button class="carousel-button" id="nextButton">
+                            <i class="fa-solid fa-chevron-right fa-2xl"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="indicators" id="indicators"></div>
     </div>
     <div id="service-section">
         <div class="service-container">
