responsive height fix and seo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Balises Open Graph -->
+    <meta property="og:title" content="LM Distribution">
+    <meta property="og:description" content="Mise à disposition gratuite de distributeur automatique">
+    <meta property="og:image" content="img\service-bg.png">
+    <meta property="og:url" content="https://lm-distribution.github.io/">
+
+    <!-- Balises Twitter Card -->
+    <meta name="twitter:title" content="LM Distribution">
+    <meta name="twitter:description" content="Mise à disposition gratuite de distributeur automatique">
+    <meta name="twitter:image" content="img\service-bg.png">
+
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
     <script src="https://kit.fontawesome.com/c679881651.js" crossorigin="anonymous"></script>
@@ -111,13 +123,13 @@
                     </div>
                     <div class="slide-container">
                         <div class="carousel-slide" id="carousel-image-1">
-                            <img src="img/machine1.png" alt="Melodia">
+                            <img src="img/machine1.png" alt="Nekta Melodia">
                         </div>
                         <div class="carousel-slide" id="carousel-image-3">
-                            <img src="img/machine3.png" alt="Kikko">
+                            <img src="img/machine3.png" alt="Nekta Kikko">
                         </div>
                         <div class="carousel-slide" id="carousel-image-2">
-                            <img src="img/machine2.png" alt="Kikko Max">
+                            <img src="img/machine2.png" alt="Nekta Kikko Max">
                         </div>
                     </div>
                     <div class="button-2-container">
@@ -136,20 +148,32 @@
             <div class="card-container">
                 <div class="card"> 
                     <div class="card-description">
-                        <i class="fa-solid fa-screwdriver-wrench fa-2xl"></i>
-                        <p>Dépannage 7/7j</p>
+                        <div class="card-description-icon">
+                            <i class="fa-solid fa-screwdriver-wrench"></i>
+                        </div>
+                        <div class="card-description-text">
+                            <p>Dépannage 7/7j</p>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-description">
-                        <i class="fa-solid fa-rotate-right fa-2xl"></i>
-                        <p>Réapprovisionnement et entretient par notre équipe</p>
+                        <div class="card-description-icon">
+                            <i class="fa-solid fa-rotate-right"></i>
+                        </div>
+                        <div class="card-description-text">
+                            <p>Réapprovisionnement et entretient par notre équipe</p>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-description">
-                        <i class="fa-brands fa-creative-commons-nc-eu fa-2xl"></i>
-                        <p>Mise en place gratuite</p>
+                        <div class="card-description-icon">
+                            <i class="fa-brands fa-creative-commons-nc-eu"></i>
+                        </div>
+                        <div class="card-description-text">
+                            <p>Mise en place gratuite</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -159,12 +183,12 @@
         <p class="footer-title">Nous Contacter</p>
         <div class="contact-container">
             <div class="contact">
-                <img src="img/phone-solid.svg" alt="">
-                <p>06 17 36 34 93</p>
+                <img src="img/phone-solid.svg" alt="Phone Call">
+                <p><a href="tel:+336 17 36 34 93">06 17 36 34 93</a></p>
             </div>
             <div class="contact">
-                <img src="img/envelope-solid.svg" alt="">
-                <p>L.M.Distribution13140@gmail.com</p>
+                <img src="img/envelope-solid.svg" alt="Email">
+                <p><a href="mailto:L.M.Distribution13140@gmail.com">L.M.Distribution13140@gmail.com</a></p>
             </div>
         </div>
         <div>
