ajout equipement divers

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
     </div>
     <div class="distrib-container" id="distrib-section">
         <div class="distrib-title">
-            <p>Nos Distributeurs</p>
+            <p class="distrib-title-1 active" id="distrib-title-1">Nos Distributeurs</p>
+            <p class="distrib-title-2" id="distrib-title-2">Equipement divers</p>
         </div>
-        <div class="distrib-content">
+        <div class="distrib-content" id="distrib-content">
             <div class="distrib-description" id="melodia">
                 <p class="description-title">Necta Melodia</p>
                 <div class="description-text">
@@ -141,6 +142,54 @@
             </div>
         </div>
         <div class="indicators" id="indicators"></div>
+        <div class="other-distrib-content" id="other-distrib-content">
+            <div class="other-distrib-description card-1">
+                <div class="other-distrib-title">
+                    <p>Piscine collective</p>
+                </div>
+                <div class="other-distrib-text">
+                    <ul>
+                        <li>Lunettes</li>
+                        <li>Bonnets</li>
+                        <li>Pince nez</li>
+                        <li>Brassards</li>
+                        <li>Maillots de bain</li>
+                        <li>...</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="other-distrib-description card-2">
+                <div class="other-distrib-title">
+                    <p>Parapharmacie</p>
+                </div>
+                <div class="other-distrib-text">
+                    <ul>
+                        <li>Gants / Masques jetables</li>
+                        <li>Compresses</li>
+                        <li>Pensements</li>
+                        <li>Gels hydroalcoolique</li>
+                        <li>Arnica</li>
+                        <li>Sérums physiologique</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="other-distrib-description card-3">
+                <div class="other-distrib-title">
+                    <p>Autres équipements</p>
+                </div>
+                <div class="other-distrib-text">
+                    <ul>
+                        <li>Chargeurs téléphonique</li>
+                        <li>Écouteurs</li>
+                        <li>Petites batteries</li>
+                        <li>Enceintes</li>
+                        <li>Jeux petit format</li>
+                        <li>Produits pour fumeur</li>
+                        <li>Produits pour adulte</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="service-section">
         <div class="service-container">
