--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <meta name="twitter:image" content="img\service-bg.png">
 
     <link rel="stylesheet" href="style.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6545HFPLJS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6545HFPLJS');
+    </script>
     <script src="index.js"></script>
     <script src="https://kit.fontawesome.com/c679881651.js" crossorigin="anonymous"></script>
     <title>LM Distribution - Mise à disposition gratuite de distributeur automatique</title>
